# tut_common_msgs

./: CMakeLists.txt  README.md  package.xml
action/: CheckForObjects.action
msg/: BoundingBox.msg
