<?xml version="1.0"?>
<package>
  <name>tut_common_msgs</name>
  <version>0.1.0</version>
  <description>ROS actionlib message definitions for SUT testing</description>
  <maintainer email="mwagner@edge-case-research.com">Greydon Foil</maintainer>
  <license>TBD</license>
  <url type="website">https://www.edge-case-research.com</url>
  <author email="mwagner@edge-case-research.com">Greydon Foil</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
